--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -40,26 +40,65 @@
         & .list__item {
             padding: 15px 10px;
             margin-right: 30px;
-            font-family: arial;
+            font-family: Arial, Helvetica, sans-serif;
             font-size: 13px;
             font-weight: bold;
-            // background-color: #fff;
-            // border-top: 5px solid $marin;
-            transition: all 0.3s;
-            
-            
+            &:hover {
+                color: $marin;
+                background-color: #fff;
+                border-top: 5px solid $marin;
+            } 
+                       
             & .item__link {
                 text-transform: uppercase;
                 color:#000;          
             }
         }
 
-        & .list__item:hover {
-            color: $marin;
-            background-color: #fff;
-            border-top: 5px solid $marin;
-        } 
+        & .list__item--services {
 
+            position: relative;
+
+            & .services__list {
+                position: absolute;
+                top: 40px;
+                left: 0;
+                background-color: #fff;
+                width: 190px;
+                @include clear-list;
+                display: none;
+                padding: 5px;
+                border-bottom: 5px solid $marin;
+
+                
+
+                & .sublist__item {
+                    padding: 10px 10px;
+                    border-bottom: 1px solid $lightgrey;
+                    &:last-child {
+                        border: none;
+                    }
+                    & .sublist__link {
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-weight: normal;
+                        color: #000;
+                        &:hover {
+                            color: $marin;
+                        }
+                    }
+                }
+            }
+
+            &:hover {
+                .services__list {
+                    display: block;
+                }
+            }
+        }
+
+        
+
+      
     }
    }
 
