header & middle begin

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,11 @@
 
     }
 
-    .fa {
+    .fa-chevron-down {
         margin-left: 10px;
+    }
+
+    .fa-angle-right {
+        margin-right: 10px;
+        color: #000;
     }
