--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -36,6 +36,7 @@
         justify-content: space-between;
         align-items: center;
         color: #000;
+        z-index: 100;
 
         & .list__item {
             padding: 15px 10px;
