--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,3 +26,12 @@ body {
         margin-right: 10px;
         color: #000;
     }
+
+    button {
+        padding: 0;
+        border: none;
+        font: inherit;
+        color: inherit;
+        background-color: transparent;
+        cursor: pointer;
+      }
