--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -78,11 +78,60 @@
         }
 
         & .footer__connect {
-
+            
             & .footer__social {
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
                 width: 200px;
                 height: 100px;
-                border: 1px solid red;
+
+                
+                & .social__link {
+                    
+                    & .link__logo {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    background-position: -2px 2px;
+                    transition: all .5s ease-in-out;
+                    margin-bottom: 10px;
+
+                        &:hover {
+                            transform: scale(0.8);
+                        }
+                    }
+
+                    & .link__logo--fb {
+                    background: url('img/facebook.png') no-repeat;
+                    margin-right: 1px;
+                    }
+
+                    & .link__logo--bl {
+                        background: url('img/facebook.png') no-repeat;
+                    }
+
+                    & .link__logo--pin {
+                        background: url('img/facebook.png') no-repeat;
+                        margin: none;
+                    }
+
+                    & .link__logo--li {
+                        background: url('img/facebook.png') no-repeat;
+                        margin-right: 1px;
+
+                    }
+
+                    & .link__logo--sk {
+                        background: url('img/facebook.png') no-repeat;
+                    }
+
+                    & .link__logo--ws {
+                        background: url('img/facebook.png') no-repeat;
+                        margin-right: none;
+                    }
+
+                }
             }
         }
 
@@ -100,21 +149,19 @@
 
             & .footer__logo {
                 font-size: 50px;
-        margin-top: 35px;
-        margin-bottom: 45px;
+                margin-top: 35px;
+                margin-bottom: 45px;
 
-        & .logo__bis {
+                & .logo__bis {
 
-            font-weight: bold;
-            color:#000;
-        }
+                    font-weight: bold;
+                    color:#000;
+                }
 
-        & .logo__lite {
-            color: $marin;
-        }
-
+                & .logo__lite {
+                    color: $marin;
+                }          
             }
         }
-
     }   
 }
