--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -108,26 +108,25 @@
                     }
 
                     & .link__logo--bl {
-                        background: url('img/facebook.png') no-repeat;
+                        background: url('img/dribbble.png') no-repeat;
                     }
 
                     & .link__logo--pin {
-                        background: url('img/facebook.png') no-repeat;
+                        background: url('img/pinterest.png') no-repeat;
                         margin: none;
                     }
 
                     & .link__logo--li {
-                        background: url('img/facebook.png') no-repeat;
+                        background: url('img/linkedin.png') no-repeat;
                         margin-right: 1px;
-
                     }
 
                     & .link__logo--sk {
-                        background: url('img/facebook.png') no-repeat;
+                        background: url('img/skype.png') no-repeat;
                     }
 
-                    & .link__logo--ws {
-                        background: url('img/facebook.png') no-repeat;
+                    & .link__logo--sh {
+                        background: url('img/share.png') no-repeat;
                         margin-right: none;
                     }
 
